Fix spacing, layout for footer

--- a/style.css
+++ b/style.css
@@ -246,4 +246,10 @@ h2 {
   padding: 96px 0;
 }
 
-/*  */
+/* Footer */
+.footer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 32px 0;
+}
